--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "firebase": "^4.12.0",
+    "history": "^4.7.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-button": "^0.5.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-step": "^0.4.1",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-axios": "0.0.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^0.18.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "rxjs": "^5.5.8"
   },
   "scripts": {
     "start": "react-scripts start",
