--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "adv": "^0.1.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "classnames": "^2.2.5",
     "firebase": "^4.12.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
@@ -40,6 +41,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "build-css": "node-sass --source-map true --include-path src/styles/scss src/styles/scss/index.scss  src/styles/css/index.css",
+    "watch-css": "node-sass src/styles/scss/index.scss -wo src/styles/css"
   }
 }
