--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/functions/node_modules
 
 # testing
 /coverage
@@ -11,6 +12,7 @@
 
 # secrets
 /secrets
+/functions/config.json
 
 # misc
 .DS_Store
