--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.0.0",
     "classnames": "^2.2.5",
     "firebase": "^4.12.0",
+    "formik": "^0.11.11",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
@@ -35,7 +36,8 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "remove": "^0.1.5",
-    "rxjs": "^5.5.8"
+    "rxjs": "^5.5.8",
+    "yup": "^0.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
