--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-share": "^2.1.1",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-axios": "0.0.2",
