--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest-cli": "^22.4.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
